# preferences-rs

./: .gitignore  Cargo.toml  README.md  appveyor.yml
src/: lib.rs
