[package]
name = "preferences"
version = "0.5.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Read and write user-specific application data (in stable Rust)"
documentation = "https://andybarron.github.io/preferences-rs"
repository = "https://github.com/AndyBarron/preferences-rs"
readme = "README.md"
keywords = ["preferences", "user", "data", "persistent", "storage"]
license = "MIT"

[dependencies]
# TODO conditional dependencies once Rust 1.8.0 hits stable
rustc-serialize = "^0.3.18"
winapi = "^0.2.5"
ole32-sys = "^0.2.0"
shell32-sys = "^0.1.1"
