[package]
name = "preferences"
version = "1.1.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Read and write user-specific application data (in stable Rust)"
documentation = "https://docs.rs/preferences"
repository = "https://github.com/AndyBarron/preferences-rs"
readme = "README.md"
keywords = ["preferences", "user", "data", "persistent", "storage"]
license = "MIT"

[dependencies]
app_dirs = "^1.1.1"
serde = "^0.9.6"
serde_json = "^0.9.5"

[dev-dependencies]
serde_derive = "^0.9.6"
